<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TPhaseDraining" Id="{32c7465a-c6e6-458f-ba2a-5e00c7fb7eef}">
    <Declaration><![CDATA[TYPE TPhaseDraining :
STRUCT
	Cmd : TPhaseCmd;
	State : TPhaseState;
	
	ParamDrainLevel : REAL;
	WaterLevel : REAL;
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>